# aiohttp-apischema

./: .coveragerc  .gitignore  .mypy.ini  .readthedocs.yml  CHANGES.rst  MANIFEST.in  README.rst  example.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
aiohttp_apischema/: __init__.py  generator.py  response.py
docs/: api.rst  conf.py  index.rst
tests/: test_generator.py  test_swagger_ui.py
